[package]
name = "poem"
version = "0.1.0"
edition = "2021"
description = "a repo for poems"
authors = ["yu_h-neu@reachauto.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tantivy = "0.16.1"
cang-jie = "0.13.0"
clap = { version = "3", features = ["derive"] }
anyhow = "1"
jieba-rs = "0.6"
colored = "2"
rand = "0.8.0"
indicatif = "0.16.2"
lazy_static = "1.3.0"